--- a/examples/STEMfit-example.ipynb
+++ b/examples/STEMfit-example.ipynb
@@ -338,14 +338,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "savefig(lp_histogram, \"example results\\\\lattice parameter histogram.png\")\n",
-    "savefig(strain_histogram, \"example results\\\\strain histogram.png\")\n",
+    "STEMfit.savefig(lp_histogram, \"example results\\\\lattice parameter histogram.png\")\n",
+    "STEMfit.savefig(strain_histogram, \"example results\\\\strain histogram.png\")\n",
     "\n",
-    "savefig(lp_map_1, \"example results\\\\lattice parameter map 1.png\")\n",
-    "savefig(lp_map_2, \"example results\\\\lattice parameter map 2.png\")\n",
+    "STEMfit.savefig(lp_map_1, \"example results\\\\lattice parameter map 1.png\")\n",
+    "STEMfit.savefig(lp_map_2, \"example results\\\\lattice parameter map 2.png\")\n",
     "\n",
-    "savefig(strain_map_1, \"example results\\\\strain map 1.png\")\n",
-    "savefig(strain_map_2, \"example results\\\\strain map 2.png\")"
+    "STEMfit.savefig(strain_map_1, \"example results\\\\strain map 1.png\")\n",
+    "STEMfit.savefig(strain_map_2, \"example results\\\\strain map 2.png\");"
    ]
   },
   {
