Finalized example notebooks

--- a/examples/Plotting results.ipynb
+++ b/examples/Plotting results.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **STEMfit example**"
+    "# **STEMfit example**\n",
+    "## *Processing the results*"
    ]
   },
   {
@@ -13,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook gives a short demonstration of how to detect atoms in a STEM image and determine the unit cell. First, we start by importing `STEMfit` and `Plots`:"
+    "This notebook demonstrates how to process the results of the center of mass or gaussian fitting modes to get local lattice parameters or strain for each atom."
    ]
   },
   {
@@ -22,21 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg; Pkg.activate(\"X:\\\\Documents\\\\virtualenvs\\\\Julia_STEMfit\");\n",
-    "#sing Pkg; Pkg.activate(\"C:\\\\Users\\\\ewout\\\\Documents\\\\venv\\\\Julia-STEMfit\");\n",
-    "\n",
-    "#using Pkg; Pkg.activate(\"C:\\\\Users\\\\Ewout\\\\Documents\\\\venv\\\\Julia\\\\STEMfit\");\n",
-    "using Revise\n",
-    "import STEMfit\n",
-    "#using Plots"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we load our example image. The image we use here is of three oxide perovskite layers grown epitaxially on each other. By setting `convert=true`, we let `STEMfit` convert our 16 bit TIFF image into the required format."
+    "import STEMfit"
    ]
   },
   {
@@ -45,7 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = STEMfit.load_image(\"image.tif\", convert=true);"
+    "image = STEMfit.load_image(\"image.tif\", convert=true);\n",
+    "atom_parameters = STEMfit.load_atomic_parameters(\"Gaussian fitting results\\\\atomic parameters.csv\");"
    ]
   },
   {
@@ -53,41 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We filter the raw image using a combination of singular value decomposition and Gaussian convolution. `STEMfit` will automatically determine the number of singular vectors to use. For diagnostic purposes, we can set the keyword argument `plot=true`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_image = STEMfit.filter_image(image, plot=false);"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, we use the `find_atoms` function to find atoms in the image using an adaptive thresholding procedure. The function takes the image as an argument as well as `bias` and `window_size` parameters which control the thresholding. Increasing `bias` tends to make the threshold higher (i.e. more separation of atoms), `window_size` determines how big of an area is considered at each point in the image. The function returns a matrix of atom positions, a vector of atom widths, a vector of atom intensities and the thresholded image. The latter can be used to assess the quality of the thresholding and asjust the `bias` and `window_size` parameters. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(atom_parameters, thresholded_image) = STEMfit.find_atoms(filtered_image, bias=0.5, window_size=3, min_atom_size=10);"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All atoms are correctly detected. `STEMfit` will now try to find potential unit cells in the atomic positions. To do this, it finds clusters in the vectors between each pair of atoms using the [DBSCAN](https://www.wikiwand.com/en/DBSCAN) algorithm. Any two of such vectors may form the side of a possible unit cell. We restrict the angle of the unit cell to 85-95 degrees (i.e. a rectangular unit cell) using the `uc_allowed_angles` parameter and use the default settings for all other parameters. The possible choices for unit cells are automatically plotted together with the average *local* atomic environment."
+    "`STEMfit` will now try to find potential unit cells in the atomic positions. "
    ]
   },
   {
@@ -104,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems like `STEMfit` found a correct unit cell (Unit cell 3). Bear in mind that this unit cell represents the *average* translational symmetry in the whole image. To transform our atomic positions (in pixel units) to positions in length units (e.g. nm), we can use part of the image as a reference. In this case, the bottom ~1/5 of the image is a substrate with known lattice parameters. First, we calculate the local lattice parameter for each atom. We use the `calculate_lattice_parameters` function using the average unit cell we found and otherwise standard settings. "
+    "To transform our atomic positions (in pixel units) to positions in length units (e.g. nm), we can use part of the image as a reference. In this case, the bottom ~1/5 of the image is a substrate with known lattice parameters. First, we calculate the local lattice parameter for each atom. We use the `calculate_lattice_parameters` function using the average unit cell we found and otherwise standard settings. "
    ]
   },
   {
@@ -325,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STEMfit.save_atomic_positions(\"example results\\\\results.csv\", \n",
+    "STEMfit.save_atomic_parameters(\"Final results\\\\results.csv\", \n",
     "                                atom_parameters=atom_parameters_in_nm, \n",
     "                                lattice_parameters=lattice_parameters_in_nm, \n",
     "                                strain=strain, \n",
@@ -338,136 +292,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STEMfit.savefig(lp_histogram, \"example results\\\\lattice parameter histogram.png\")\n",
-    "STEMfit.savefig(strain_histogram, \"example results\\\\strain histogram.png\")\n",
+    "STEMfit.savefig(lp_histogram, \"Final results\\\\lattice parameter histogram.png\")\n",
+    "STEMfit.savefig(strain_histogram, \"Final results\\\\strain histogram.png\")\n",
     "\n",
-    "STEMfit.savefig(lp_map_1, \"example results\\\\lattice parameter map 1.png\")\n",
-    "STEMfit.savefig(lp_map_2, \"example results\\\\lattice parameter map 2.png\")\n",
+    "STEMfit.savefig(lp_map_1, \"Final results\\\\lattice parameter map 1.png\")\n",
+    "STEMfit.savefig(lp_map_2, \"Final results\\\\lattice parameter map 2.png\")\n",
     "\n",
-    "STEMfit.savefig(strain_map_1, \"example results\\\\strain map 1.png\")\n",
-    "STEMfit.savefig(strain_map_2, \"example results\\\\strain map 2.png\");"
+    "STEMfit.savefig(strain_map_1, \"Final results\\\\strain map 1.png\")\n",
+    "STEMfit.savefig(strain_map_2, \"Final results\\\\strain map 2.png\");"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Gaussian fitting"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, we determine the background contribution:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "background_image = STEMfit.construct_background(filtered_image, unit_cells[3]);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We then obtain initial parameters for the gaussians using the atomic parameters we calculated using the center of mass mode:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fitting_parameters = STEMfit.fitting_parameters(atom_parameters, background_image);"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally, we fit the model to the image. This can take a few minutes. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_model = STEMfit.ImageModel(fitting_parameters, unit_cells[3], background_image);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "STEMfit.fit!(image_model, image)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at the results. On the left, we display the experimental data, on the right is the fitted model. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "STEMfit.show_images(image, STEMfit.produce_image(image_model))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "An excellent fit has been achieved, so we save the results to a file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "STEMfit.save_model(image_model, \"example results\\\\results_fitted.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.7.2"
   },
   "orig_nbformat": 4,
   "vscode": {
