--- a/examples/Gaussian fitting.ipynb
+++ b/examples/Gaussian fitting.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fitting_parameters = STEMfit.fitting_parameters(atom_parameters_fitted, background_image);"
+    "fitting_parameters = STEMfit.fitting_parameters(atom_parameters, background_image);"
    ]
   },
   {
