--- a/examples/STEMfit.ipynb
+++ b/examples/STEMfit.ipynb
@@ -100,7 +100,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(unit_cells, neighbors, atom_tree) = STEMfit.find_unit_cells(atom_parameters, uc_allowed_angles=85:95);"
+    "(unit_cells, neighbors, atom_tree) = STEMfit.find_unit_cells(\n",
+    "                                    atom_parameters, \n",
+    "                                    uc_allowed_angles=85:95, #Only orthogonal unit cells\n",
+    "                                    uc_allowed_orientation=175:185 #Only horizontal unit cells\n",
+    "                                    );"
    ]
   },
   {
