changed example notebook

--- a/examples/STEMfit.ipynb
+++ b/examples/STEMfit.ipynb
@@ -5,8 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **STEMfit example**\n",
-    "## *Center of mass mode*"
+    "# **STEMfit example**"
    ]
   },
   {
@@ -23,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg; Pkg.activate(\"..\");\n",
+    "using Pkg; Pkg.activate(\"./path/to/environment\");\n",
     "import STEMfit"
    ]
   },
@@ -75,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp = STEMfit.ThresholdingParameters(bias=0.5, window_size=5, minimum_atom_size=0)\n"
+    "tp = STEMfit.ThresholdingParameters(bias=0.5, window_size=5, minimum_atom_size=0)"
    ]
   },
   {
@@ -95,6 +94,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Having now found the atomic positions in the image, we can find a unit cell. The `uc_allowed_angles` parameter controls the permissible range of unit cell angles, i.e. `uc_allowed_angles ≈ 90` for orthogonal unit cells. `uc_allowed_orientation` controls the range of orientations the unit cell can have in the image, where zero is the direction horizontally to the left. These parameters can be used to make sure the 'correct' unit cell is found or they can be omitted. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -108,12 +114,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The unit cell is now used to find the local lattice parameters, in units of pixels, for each atomic column."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = STEMfit.calculate_lattice_parameters(atom_parameters, unit_cells[2])"
+    "results = STEMfit.calculate_lattice_parameters(atom_parameters, unit_cells[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To convert pixel units into true length units (e.g. nanometers), we need to find the pixel size. We can use part of the image of which we know the true lattice parameters as a reference. In this case, the bottom 20% of the image is a single crystal of SrTiO3, which has a cubic structure with lattice parameters of 0.3905 nm. "
    ]
   },
   {
@@ -123,15 +143,23 @@
    "outputs": [],
    "source": [
     "known_lattice_parameters = (0.3905, 0.3905)\n",
-    "reference_range_y = 0.8*size(image, 1):size(image, 1)\n",
-    "reference_range_x = 0:size(image, 2)\n",
+    "\n",
+    "reference_range_y = 0.8*size(image, 1):size(image, 1) #Bottom 20% of the image\n",
+    "reference_range_x = 0:size(image, 2) #Full width of the image\n",
     "\n",
     "STEMfit.add_pixel_size(\n",
     "    results, \n",
     "    reference_range_y, \n",
     "    reference_range_x, \n",
     "    known_lattice_parameters\n",
-    "    )\n"
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we save the results to a file. The pixel units are automatically converted into length units if a pixel size is available in `results`. We also save the thresholded image and the filtered image."
    ]
   },
   {
@@ -140,53 +168,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ellipticity_map, angle_map = STEMfit.map_ellipticity(results, markersize=2, size=(1000,400));"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lp_histogram = STEMfit.lattice_parameter_histogram(results);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(lp_map_1, lp_map_2) = STEMfit.map_lattice_parameter(results, markersize=2);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "STEMfit.save_atomic_parameters(\"Results/results.csv\", results)\n",
+    "STEMfit.save_results(\"Results/results.csv\", results)\n",
     "\n",
     "STEMfit.save(\"Results/binarized image.png\", thresholded_image)\n",
-    "STEMfit.save(\"Results/filtered image.png\", filtered_image)\n",
-    "\n",
-    "STEMfit.savefig(lp_histogram, \"Results/lattice parameter histogram.png\")\n",
-    "\n",
-    "STEMfit.savefig(lp_map_1, \"Results/lattice parameter map 1.png\")\n",
-    "STEMfit.savefig(lp_map_2, \"Results/lattice parameter map 2.png\")\n",
-    "\n",
-    "STEMfit.savefig(ellipticity_map, \"Results/strain map 1.png\")\n",
-    "STEMfit.savefig(angle_map, \"Results/strain map 2.png\");"
+    "STEMfit.save(\"Results/filtered image.png\", filtered_image)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
